syntax = "proto3";
package worker;

import  "client/pfs/pfs.proto";

message ProcessRequest {
  // The file to process
  repeated pfs.FileInfo data = 1;
}

message ProcessResponse {
  pfs.Tag tag = 1;
}

service Worker {
  rpc Process(ProcessRequest) returns (ProcessResponse) {}
}
